--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ footer {
         <img src="yehuda-levi.jpg" alt="יהודה לוי מגשר">
         <div>
             <h1>יהודה לוי</h1>
-            <h3>מגשר בכיר ויישוב סכסוכים</h3>
+            <h3>מגשר בכיר ויועץ ומטפל זוגי ומשפחתי</h3>
             <p>
                 מגשר מוסמך משנת 1998, מוותיקי המגשרים בישראל, בעל ניסיון רב-שנים
                 בניהול הליכי גישור מורכבים במגוון תחומים.
@@ -145,6 +145,8 @@ footer {
             <li>מגשר בתיקים טרם פנייה לערכאות משפטיות</li>
             <li>מגשר בתוכנית מהו״ת משנת 2008</li>
             <li>רשום מעל 20 שנה ברשימת המגשרים של בתי המשפט</li>
+            <li>מראשוני העוסקים בתיאום הורי במינוי בית משפט בישראל, מראשית שנות ה-2000</li>
+
         </ul>
     </section>
 
@@ -155,6 +157,10 @@ footer {
             <li>מאמן ומנחה בכיר בפרקטיקום מגשרים – משרד המשפטים והנהלת בתי המשפט</li>
             <li>חבר בצוותי הדרכה והכשרה במרכזי גישור שונים</li>
             <li>הכשרת מנהלים ליישום תפיסת הגישור בארגונים</li>
+            <li>מנחה ומלווה מרכזי גישור בקהילה משלב ההקמה ועד ליווי שוטף</li>
+            <li>סופרווייזר למגשרים בראשית דרכם המקצועית</li>
+
+
         </ul>
     </section>
 
